--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --progress --color --config ./config/webpack.config.dev.js",
-    "build": "webpack"
+    "build": "webpack --config ./config/webpack.config.dev.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
