--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0",
     "style-loader": "^0.21.0",
