图片上传和展示以及删除功能

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack-dev-server --progress --color --config ./config/webpack.config.dev.js",
     "build": "webpack --config ./config/webpack.config.dev.js"
   },
+  "proxy": "http://localhost:8081",
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
