--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "webpack-dev-server --progress --color --config ./config/webpack.config.dev.js",
-    "build": "webpack --config ./config/webpack.config.prod.js --colors --progress"
+    "build": "webpack --config ./config/webpack.config.prod.js --colors --progress",
+    "analyze": "webpack --config ./config/webpack.config.analyze.js --colors --progress"
   },
   "proxy": "http://localhost:8081",
   "devDependencies": {
@@ -26,6 +27,7 @@
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
+    "webpack-bundle-analyzer": "^2.13.1",
     "webpack-cli": "^2.0.15",
     "webpack-dev-server": "^3.1.3"
   },
