--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
+    "eslint": "^5.6.0",
+    "eslint-config-zcool": "^1.4.0",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.2",
@@ -28,16 +32,24 @@
     "url-loader": "^1.0.1",
     "webpack": "^4.6.0",
     "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^2.0.15",
+    "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.3"
   },
   "dependencies": {
-    "antd": "^3.4.4",
+    "antd": "^3.10.0",
     "axios": "^0.18.0",
+    "babel-eslint": "^10.0.0",
     "draft-js": "^0.10.5",
+    "draft-js-alignment-plugin": "^2.0.5",
+    "draft-js-emoji-plugin": "^2.1.1",
     "draft-js-export-html": "^1.2.0",
+    "draft-js-import-html": "^1.2.1",
+    "draft-js-plugins-editor": "^2.1.1",
+    "emojione": "^4.0.0",
     "react": "^16.3.2",
+    "react-color": "^2.14.1",
     "react-dom": "^16.3.2",
+    "react-highlight": "^0.12.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "redux": "^4.0.0"
