--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,13 @@
 {
-    "plugins": ["transform-runtime"],
+    "plugins": [
+        "transform-runtime",
+        "transform-decorators-legacy",
+        "transform-class-properties"
+    ],
     "presets": [
-        "es2015", "env", "stage-0", "react"
+        "es2015",
+        "env",
+        "stage-0",
+        "react"
     ]
 }
