--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "babel-plugin-transform-do-expressions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
@@ -45,13 +48,13 @@
     "compression": "^1.7.3",
     "draft-js-prism": "^1.0.6",
     "express": "^4.16.4",
+    "mobx": "^5.6.0",
+    "mobx-react": "^5.3.6",
     "prismjs": "^1.15.0",
     "react": "^16.3.2",
     "react-color": "^2.14.1",
     "react-dom": "^16.3.2",
     "react-highlight": "^0.12.0",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
-    "redux": "^4.0.0"
+    "react-router-dom": "^4.2.2"
   }
 }
