--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,4 @@
 {
-    "plugins": [
-        "transform-runtime",
-        "transform-decorators-legacy",
-        "transform-class-properties"
-    ],
-    "presets": [
-        "es2015",
-        "env",
-        "stage-0",
-        "react"
-    ]
+  "plugins": ["transform-runtime", "transform-decorators-legacy", "transform-class-properties"],
+  "presets": ["es2015", "env", "stage-0", "react"]
 }
