--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "proxy": "http://localhost:8081",
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -25,7 +26,6 @@
     "babel-runtime": "^6.26.0",
     "css-loader": "^0.28.11",
     "eslint": "^5.6.0",
-    "eslint-config-zcool": "^1.4.0",
     "eslint-loader": "^2.1.1",
     "eslint-plugin-react": "^7.11.1",
     "file-loader": "^1.1.11",
