--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
-  "plugins": ["transform-runtime", "transform-decorators-legacy", "transform-class-properties"],
-  "presets": ["es2015", "env", "stage-0", "react"]
+  "presets": ["es2015", "env", "stage-0", "react"],
+  "plugins": [
+    "react-hot-loader/babel",
+    "transform-runtime",
+    "transform-decorators-legacy",
+    "transform-class-properties"
+  ]
 }
