--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-color": "^2.14.1",
     "react-dom": "^16.3.2",
     "react-highlight": "^0.12.0",
+    "react-hot-loader": "^4.8.3",
     "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
