--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^16.3.2",
     "react-highlight": "^0.12.0",
     "react-hot-loader": "^4.8.3",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "recharts": "^1.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
