--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "justDo",
+  "name": "dodo-admin",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -13,15 +13,13 @@
   "dependencies": {
     "antd": "^3.10.0",
     "axios": "^0.18.0",
-    "babel-eslint": "^10.0.0",
     "braft-editor": "^2.2.9",
     "braft-extensions": "^0.0.3",
-    "compression": "^1.7.3",
     "draft-js-prism": "^1.0.6",
     "express": "^4.16.4",
     "mobx": "^5.6.0",
     "mobx-react": "^5.3.6",
-    "prismjs": "^1.15.0",
+    "prismjs": "^1.17.1",
     "react": "^16.3.2",
     "react-color": "^2.14.1",
     "react-dom": "^16.3.2",
@@ -47,7 +45,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^5.6.0",
     "eslint-loader": "^2.1.1",
-    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react": "^7.14.3",
     "file-loader": "^1.1.11",
     "happypack": "^5.0.1",
     "html-webpack-plugin": "^3.2.0",
@@ -57,9 +55,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
     "url-loader": "^1.0.1",
-    "webpack": "^4.6.0",
-    "webpack-bundle-analyzer": "^2.13.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.3"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
